// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCardBanner renders correct snapshot 1`] = `
<div
  className="DescribeElementCardBanner-contentContainer-2"
>
  <div
    className="DescribeElementCardBanner-iconContainer-5"
  >
    <WithStyles(ForwardRef(Icon))
      className="DescribeElementCardBanner-icon-4"
    >
      people
    </WithStyles(ForwardRef(Icon))>
  </div>
  <WithStyles(ForwardRef(Typography))
    className="DescribeElementCardBanner-cardTitle-1"
    variant="h5"
  >
    expectedTitle
  </WithStyles(ForwardRef(Typography))>
</div>
`;

exports[`DescribeElementCardBanner renders correct snapshot with switches 1`] = `
<div
  className="DescribeElementCardBanner-contentContainer-2"
>
  <WithStyles(ForwardRef(Typography))
    className="DescribeElementCardBanner-cardTitle-1"
    variant="h5"
  >
    expectedTitle
  </WithStyles(ForwardRef(Typography))>
</div>
`;
